--- a/test.ipynb
+++ b/test.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "661794"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22050"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +91,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,70 +102,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fabri\\AppData\\Local\\Temp\\ipykernel_91212\\4210387675.py:1: FutureWarning: Pass y=[ 0.00732422  0.01660156  0.00762939 ... -0.05560303 -0.06106567\n",
+      " -0.06417847] as keyword args. From version 0.10 passing these as positional arguments will result in an error\n",
+      "  mfcc = lr.feature.mfcc(y)\n"
+     ]
+    }
+   ],
    "source": [
-    "tempo, beats = lr.beat.beat_track(y=y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Frames corresponding to beats"
+    "mfcc = lr.feature.mfcc(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  11,   32,   53,   73,   94,  114,  135,  156,  177,  197,  218,\n",
-       "        239,  260,  280,  301,  322,  343,  363,  384,  405,  426,  446,\n",
-       "        467,  488,  509,  529,  550,  570,  591,  612,  633,  653,  673,\n",
-       "        693,  713,  734,  755,  775,  796,  816,  837,  858,  878,  898,\n",
-       "        919,  940,  960,  981, 1002, 1022, 1043, 1064, 1085, 1105, 1126,\n",
-       "       1147, 1168, 1188, 1209, 1230, 1251])"
+       "array([[-240.63542   , -211.21436   , -193.90889   , ..., -109.999146  ,\n",
+       "         -86.81442   ,  -84.073586  ],\n",
+       "       [  99.64764   ,  101.04283   ,  102.24396   , ...,  150.07935   ,\n",
+       "         138.94867   ,  138.30977   ],\n",
+       "       [  -7.4032764 ,   -8.358528  ,    1.9154346 , ...,  -50.795135  ,\n",
+       "         -36.536144  ,  -28.136356  ],\n",
+       "       ...,\n",
+       "       [   9.741491  ,    6.369472  ,    3.650026  , ...,   -2.857153  ,\n",
+       "          -6.2137365 ,   -0.49142802],\n",
+       "       [   3.59087   ,    4.0508485 ,    4.7889977 , ...,   -7.574688  ,\n",
+       "          -8.446719  ,   -6.7805653 ],\n",
+       "       [   5.3480153 ,    3.231847  ,    0.9402468 , ...,   -7.5553374 ,\n",
+       "           0.30610925,    3.523497  ]], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "beats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Beats per minute"
+    "mfcc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "123.046875"
+       "-113.59882"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tempo"
+    "mfcc[0].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "129.3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mfcc[0])/10"
    ]
   }
  ],
