--- a/preprocess_cnn.ipynb
+++ b/preprocess_cnn.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Music Genre Classification\n",
+    "\n",
+    "## Data Pre-Processing for Convolutional Neural Network\n",
+    "\n",
+    "Fabrizio Niro - Jacopo Signò\n",
+    "\n",
+    "GTZAN Dataset - Music Genre Classification \n",
+    "\n",
+    "https://www.kaggle.com/datasets/andradaolteanu/gtzan-dataset-music-genre-classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
