rnn x y train test

--- a/preprocess_rnn.ipynb
+++ b/preprocess_rnn.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,9 @@
     "import torch\n",
     "import sklearn\n",
     "import torch.nn.functional as tf\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +288,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,31 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"labels = np.array(data['label'])\\nle = preprocessing.LabelEncoder()\\ntarget = le.fit_transform(labels)\\ntarget = torch.tensor(target)\\ntarget.one_hot = tf.one_hot(target.to(torch.int64), 10)\""
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "labels = np.array(data['label'])\n",
     "le = preprocessing.LabelEncoder()\n",
     "target = le.fit_transform(labels)\n",
     "target = torch.tensor(target)\n",
-    "target.one_hot = tf.one_hot(target.to(torch.int64), 10)"
+    "target_one_hot = tf.one_hot(target.to(torch.int64), 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,52 +431,209 @@
        "        [0, 0, 0,  ..., 0, 0, 1]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target.one_hot"
+    "target_one_hot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Processed_data/RNN/target_one_hot', 'wb') as f: \n",
+    "    pickle.dump(target_one_hot, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Processed_data/RNN/target_one_hot', 'rb') as f:\n",
+    "    target_one_hot = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = torch.flatten(sec3_mfcc_tens, start_dim=1)\n",
+    "\n",
+    "y = target_one_hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"with open('Processed_data/RNN/target.one_hot', 'wb') as f: \\n    pickle.dump(target.one_hot, f)\""
+       "tensor([[-242.4360, -212.9897, -195.4093,  ...,    8.2815,    7.9900,\n",
+       "            0.6407],\n",
+       "        [-166.2526, -150.5379, -164.5016,  ...,    2.9243,   10.1403,\n",
+       "            8.8826],\n",
+       "        [-130.6866, -124.8639, -153.2927,  ...,    6.1132,    4.9440,\n",
+       "            6.4874],\n",
+       "        ...,\n",
+       "        [-131.0671, -115.4982, -136.4231,  ...,  -10.8892,  -12.4981,\n",
+       "          -13.9773],\n",
+       "        [-121.3808, -100.6850, -109.2582,  ...,   11.8246,    2.4684,\n",
+       "           -4.0054],\n",
+       "        [-125.6442, -113.8107, -101.1525,  ...,   -3.4184,    3.7743,\n",
+       "            1.6240]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open('Processed_data/RNN/target.one_hot', 'wb') as f: \n",
-    "    pickle.dump(target.one_hot, f)"
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 0, 0,  ..., 0, 0, 0],\n",
+       "        [1, 0, 0,  ..., 0, 0, 0],\n",
+       "        [1, 0, 0,  ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0,  ..., 0, 0, 1],\n",
+       "        [0, 0, 0,  ..., 0, 0, 1],\n",
+       "        [0, 0, 0,  ..., 0, 0, 1]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('Processed_data/RNN/target.one_hot', 'rb') as f:\n",
-    "    target.one_hot = pickle.load(f)"
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X_scaled = scaler.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.66511203, -2.63363465, -2.16007777, ...,  0.85268044,\n",
+       "         0.84140898,  0.03603165],\n",
+       "       [-0.80028887, -0.82812405, -1.07786765, ..., -0.02982452,\n",
+       "         1.20570146,  1.31627242],\n",
+       "       [ 0.07029889, -0.08587864, -0.68539645, ...,  0.49549294,\n",
+       "         0.32538691,  0.94421883],\n",
+       "       ...,\n",
+       "       [ 0.06098403,  0.184888  , -0.09472219, ..., -2.30533267,\n",
+       "        -2.62947171, -2.234635  ],\n",
+       "       [ 0.29808689,  0.61314317,  0.85643812, ...,  1.43633807,\n",
+       "        -0.0940044 , -0.68566623],\n",
+       "       [ 0.19372747,  0.23367501,  1.14025335, ..., -1.07465511,\n",
+       "         0.12723851,  0.18876083]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_scaled, y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6700, 2600) torch.Size([6700, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3300, 2600) torch.Size([3300, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Processed_data/RNN/X_train', 'wb') as f: \n",
+    "    pickle.dump(X_train, f)\n",
+    "\n",
+    "with open('Processed_data/RNN/y_train', 'wb') as f: \n",
+    "    pickle.dump(y_train, f)\n",
+    "\n",
+    "with open('Processed_data/RNN/X_test', 'wb') as f: \n",
+    "    pickle.dump(X_test, f)\n",
+    "\n",
+    "with open('Processed_data/RNN/y_test', 'wb') as f: \n",
+    "    pickle.dump(y_test, f)"
+   ]
   }
  ],
  "metadata": {
