folder structure improv

--- a/preprocess_rnn.ipynb
+++ b/preprocess_rnn.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "import IPython.display as ipyd\n",
     "import math\n",
     "import os\n",
+    "from pathlib import Path\n",
     "import pickle\n",
     "import torch\n",
     "import sklearn\n",
@@ -98,18 +99,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('sec3_subtracks', 'wb') as f:\n",
-    "    pickle.dump(sec3_subtracks, f)"
+    "Path('deepl_project/Processed_data/RNN').mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('sec3_subtracks', 'rb') as f:\n",
-    "    sec3_subtracks = pickle.load(f)"
+    "with open('Processed_data/sec3_subtracks', 'wb') as f:\n",
+    "    pickle.dump(sec3_subtracks, f)"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data_id_lab_subt', 'wb') as f:\n",
+    "with open('Processed_data/data_id_lab_subt', 'wb') as f:\n",
     "    pickle.dump(data, f)"
    ]
   },
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data_id_lab_subt', 'rb') as f:\n",
+    "with open('Processed_data/data_id_lab_subt', 'rb') as f:\n",
     "    data = pickle.load(f)"
    ]
   },
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('sec3_mfcc', 'wb') as f: \n",
+    "with open('Processed_data/sec3_mfcc', 'wb') as f: \n",
     "    pickle.dump(sec3_mfcc, f)"
    ]
   },
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('sec3_mfcc', 'rb') as f:\n",
+    "with open('Processed_data/sec3_mfcc', 'rb') as f:\n",
     "    sec3_mfcc = pickle.load(f)"
    ]
   },
@@ -634,6 +634,13 @@
     "with open('Processed_data/RNN/y_test', 'wb') as f: \n",
     "    pickle.dump(y_test, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
